--- a/7Zip.conf
+++ b/7Zip.conf
@@ -1,6 +1,6 @@
 "7Zip",
 "7 Zip Installer",
-$True,
+$False,
 $False,
 $Null,
 "",
@@ -13,11 +13,11 @@ $Null,
 	}
 	$version = $versions -split "[\n\r\s]" | Select-Object -Index 9
 	$urlversion = $version -replace "\.",""
-	$url = "http://www.7-zip.org/a/7z" + $urlversion + ".msi"
+	$url = "http://www.7-zip.org/a/7z" + $urlversion + ".exe"
 	return $url, $version
 },
 "call for /F `"tokens=2 skip=2 delims=,`" %%a in ('wmic product where `"Name Like '7-Zip%'`" get Version /format:csv') do set `"currentversion=%%a`"",
-$True,
-$True,
-$Null,
+$False,
+$False,
+"/S",
 $Null
